win animation added

--- a/wordle.html
+++ b/wordle.html
@@ -97,6 +97,59 @@
             <div class="letter" name="letter">M</div>
             <div class="delete" id="delete"><i class="fa fa-times" aria-hidden="true"></i></div>
         </div>
+    </div>
+
+    <div id="endGame">
+        <div id="win">
+            <div class="winBox">B</div>
+            <div class="winBox">R</div>
+            <div class="winBox">A</div>
+            <div class="winBox">V</div>
+            <div class="winBox">O</div>
+        </div>
+
+        <div id="lose">
+            <div class="loseBox">D</div>
+            <div class="loseBox">E</div>
+            <div class="loseBox">F</div>
+            <div class="loseBox">E</div>
+            <div class="loseBox">A</div>
+            <div class="loseBox">T</div>
+        </div>
+
+        <div id="summaryBoardContainer">
+            <div class="summaryBox"></div>
+            <div class="summaryBox"></div>
+            <div class="summaryBox"></div>
+            <div class="summaryBox"></div>
+            <div class="summaryBox"></div>
+            <div class="summaryBox"></div>
+            <div class="summaryBox"></div>
+            <div class="summaryBox"></div>
+            <div class="summaryBox"></div>
+            <div class="summaryBox"></div>
+            <div class="summaryBox"></div>
+            <div class="summaryBox"></div>
+            <div class="summaryBox"></div>
+            <div class="summaryBox"></div>
+            <div class="summaryBox"></div>
+            <div class="summaryBox"></div>
+            <div class="summaryBox"></div>
+            <div class="summaryBox"></div>
+            <div class="summaryBox"></div>
+            <div class="summaryBox"></div>
+            <div class="summaryBox"></div>
+            <div class="summaryBox"></div>
+            <div class="summaryBox"></div>
+            <div class="summaryBox"></div>
+            <div class="summaryBox"></div>
+            <div class="summaryBox"></div>
+            <div class="summaryBox"></div>
+            <div class="summaryBox"></div>
+            <div class="summaryBox"></div>
+            <div class="summaryBox"></div>
+        </div>
+
 
     </div>
 
