modified end game board

--- a/wordle.html
+++ b/wordle.html
@@ -150,6 +150,24 @@
             <div class="summaryBox"></div>
         </div>
 
+        <div id="statsContainer">
+            <div class="statBox">
+                <div class="sectionTitle">Win Percentage</div>
+                <div class="stat">50%</div>
+                <div class="subStat">5/10</div>
+            </div>
+
+            <div class="statBox">
+                <div class="sectionTitle">Average Guesses</div>
+                <div class="stat">3.2</div>
+            </div>
+        </div>
+
+        <div id="menuButtons">
+            <div class="menuOption">Play Again!</div>
+            <div class="menuOption">See Board</div>
+        </div>
+
 
     </div>
 
