added end game options (fully functional)

--- a/wordle.html
+++ b/wordle.html
@@ -154,7 +154,6 @@
             <div class="statBox">
                 <div class="sectionTitle">Win Percentage</div>
                 <div class="stat">50%</div>
-                <div class="subStat">5/10</div>
             </div>
 
             <div class="statBox">
@@ -165,10 +164,13 @@
 
         <div id="menuButtons">
             <div class="menuOption">Play Again!</div>
-            <div class="menuOption">See Board</div>
+            <div class="menuOption">View Board</div>
         </div>
+    </div>
 
-
+    <div id="smallMenu">
+        <div class="smallMenuOption">Play Again!</div>
+        <div class="smallMenuOption">View Stats</div>
     </div>
 
 
