fixed dash word bug

--- a/wordle.html
+++ b/wordle.html
@@ -16,7 +16,8 @@
         <div id="menuLeft">
             <button class="menuButton"><i class="fa fa-bars" aria-hidden="true"></i></button>
         </div>
-        <h1 style="font-size: 37.5px; padding:none; margin:none;"><strong>Wordle</strong></h1>
+        <h1 id="title"><strong>Wordle</strong></h1>
+        <h1 id="correctWord"><strong></strong></h1>
         <div id="menuRight">
             <button class="menuButton"><i class="fa fa-question-circle" aria-hidden="true"></i></button>
             <button class="menuButton"><i class="fa fa-bar-chart" aria-hidden="true"></i></button>
