--- a/wordle.html
+++ b/wordle.html
@@ -154,12 +154,12 @@
         <div id="statsContainer">
             <div class="statBox">
                 <div class="sectionTitle">Win Percentage</div>
-                <div class="stat">50%</div>
+                <div class="stat"></div>
             </div>
 
             <div class="statBox">
                 <div class="sectionTitle">Average Guesses</div>
-                <div class="stat">3.2</div>
+                <div class="stat"></div>
             </div>
         </div>
 
